--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -30,6 +30,20 @@
             <li class="nav-item">
               <a href="" class="nav-link">Contact</a>
             </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">
+                <svg>
+                  <use href="./img/icons/sprite.svg#SHOPPING-CART"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">
+                <svg>
+                  <use href="./img/icons/sprite.svg#MAGNIFYING-GLASS"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </nav>
         <p class="title-first-mogo">Creative Template</p>
@@ -115,34 +129,28 @@
                 <ul class="social-list">
                   <li class="social-item">
                     <a href="" class="social-link">
-                    <svg>
+                    <svg class="svg-social">
                       <use href="./img/icons/sprite.svg#facebook"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/twitter-2.png"
-                        alt="Tw"
-                        class="social-img"
-                    /></a>
+                      ><svg class="svg-social">
+                        <use href="./img/icons/sprite.svg#twitter"></use>
+                      </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/pinterest-3.png"
-                        alt="Pnt"
-                        class="social-img"
-                    /></a>
+                      ><svg class="svg-social">
+                        <use href="./img/icons/sprite.svg#pinterest"></use>
+                      </svg></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/instagram-4.png"
-                        alt="Ins"
-                        class="social-img"
-                    /></a>
+                      ><svg class="svg-social">
+                        <use href="./img/icons/sprite.svg#instagram"></use>
+                      </svg></a>
                   </li>
                 </ul>
               </div>
@@ -161,35 +169,28 @@
                 <ul class="social-list">
                   <li class="social-item">
                     <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/facebook-1.png"
-                        alt="Fb"
-                        class="social-img"
-                    /></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/twitter-2.png"
-                        alt="Tw"
-                        class="social-img"
-                    /></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/pinterest-3.png"
-                        alt="Pnt"
-                        class="social-img"
-                    /></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/instagram-4.png"
-                        alt="Ins"
-                        class="social-img"
-                    /></a>
+                      ><svg class="svg-social">
+                        <use href="./img/icons/sprite.svg#facebook"></use>
+                      </svg>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a href="" class="social-link"
+                        ><svg class="svg-social">
+                          <use href="./img/icons/sprite.svg#twitter"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-item">
+                      <a href="" class="social-link"
+                        ><svg class="svg-social">
+                          <use href="./img/icons/sprite.svg#pinterest"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-item">
+                      <a href="" class="social-link"
+                        ><svg class="svg-social">
+                          <use href="./img/icons/sprite.svg#instagram"></use>
+                        </svg></a>
                   </li>
                 </ul>
               </div>
@@ -208,35 +209,28 @@
                 <ul class="social-list">
                   <li class="social-item">
                     <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/facebook-1.png"
-                        alt="Fb"
-                        class="social-img"
-                    /></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/twitter-2.png"
-                        alt="Tw"
-                        class="social-img"
-                    /></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/pinterest-3.png"
-                        alt="Pnt"
-                        class="social-img"
-                    /></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/instagram-4.png"
-                        alt="Ins"
-                        class="social-img"
-                    /></a>
+                      ><svg class="svg-social">
+                        <use href="./img/icons/sprite.svg#facebook"></use>
+                      </svg>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a href="" class="social-link"
+                        ><svg class="svg-social">
+                          <use href="./img/icons/sprite.svg#twitter"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-item">
+                      <a href="" class="social-link"
+                        ><svg class="svg-social">
+                          <use href="./img/icons/sprite.svg#pinterest"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-item">
+                      <a href="" class="social-link"
+                        ><svg class="svg-social">
+                          <use href="./img/icons/sprite.svg#instagram"></use>
+                        </svg></a>
                   </li>
                 </ul>
               </div>
