--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -1,260 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Module-10</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Module-10</title>
 </head>
+
 <body>
-    <header class="header">
+  <header class="header">
+    <div class="container">
+      <nav class="navigation">
+        <a href="" class="logo">MoGo</a>
+
+        <ul class="nav__list">
+          <li class="nav__list-item">
+            <a href="" class="nav__list-link">About</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="" class="nav__list-link">Service</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="" class="nav__list-link">Work</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="" class="nav__list-link">Blog</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="" class="nav__list-link">Contact</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="" class="nav__list-link">
+              <svg>
+                <use href="./img/icons/sprite.svg#SHOPPING-CART"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="nav__list-item">
+            <a href="" class="nav__list-link">
+              <svg>
+                <use href="./img/icons/sprite.svg#MAGNIFYING-GLASS"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <p class="header__subtitle">Creative Template</p>
+      <h2 class="header__title">Welcome<br>to mogo</h2>
+      <button class="btn__learn">Learn more</button>
+    </div>
+  </header>
+  <main class="main">
+    <section class="section__service">
       <div class="container">
-        <nav class="navigation">
-          <a href="" class="logo">MoGo</a>
-  
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Service</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Work</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">
-                <svg>
-                  <use href="./img/icons/sprite.svg#SHOPPING-CART"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">
-                <svg>
-                  <use href="./img/icons/sprite.svg#MAGNIFYING-GLASS"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <p class="title-first-mogo">Creative Template</p>
-          <h2 class="title-second-mogo">Welcome<br>to mogo</h2>
-          <button class="btn-learn">Learn more</button>
+        <p class="section__subtitle">We work with</p>
+        <h2 class="section__title">Amazing services</h2>
+
+        <ul class="service__list">
+          <li class="service__list-item">
+            <p class="service__title">Photography</p>
+            <p class="service__subtitle">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li class="service__list-item">
+            <p class="service__title">Web Design</p>
+            <p class="service__subtitle">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li class="service__list-item">
+            <p class="service__title">Creativity</p>
+            <p class="service__subtitle">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li class="service__list-item">
+            <p class="service__title">seo</p>
+            <p class="service__subtitle">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li class="service__list-item">
+            <p class="service__title">Css/Html</p>
+            <p class="service__subtitle">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li class="service__list-item">
+            <p class="service__title">digital</p>
+            <p class="service__subtitle">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+        </ul>
       </div>
-    </header>
-    <main class="main">
-      <section class="section-service">
-        <div class="container">
-          <p class="title-first-line">We work with</p>
-          <h2 class="title-second-line">Amazing services</h2>
-  
-          <ul class="service-list">
-            <li class="service-item">
-              <p class="service-title">Photography</p>
-              <p class="service-subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </li>
-            <li class="service-item">
-              <p class="service-title">Web Design</p>
-              <p class="service-subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </li>
-            <li class="service-item">
-              <p class="service-title">Creativity</p>
-              <p class="service-subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </li>
-            <li class="service-item">
-              <p class="service-title">seo</p>
-              <p class="service-subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </li>
-            <li class="service-item">
-              <p class="service-title">Css/Html</p>
-              <p class="service-subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </li>
-            <li class="service-item">
-              <p class="service-title">digital</p>
-              <p class="service-subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="section-team">
-        <div class="container">
-          <p class="title-first-line">Who we are</p>
-          <h2 class="title-second-line">Meet our team</h2>
-          <p class="team-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-  
-          <ul class="team-list">
-            <li class="team-item">
-              <img
-              srcset="./img/pictures/Layer16-min.jpg 380w, ./img/pictures/Layer16@2x-min.jpg 760w"
-              sizes="380px" 
-              src="./img/pictures/Layer16-min.jpg"
-                height="470"
-                alt="Team1"
-              />
-              <span class="team-name">Matthew Dix</span>
-              <span class="team-position">Graphic Design</span>
-              <div class="team-card">
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                    <svg class="svg-social">
+    </section>
+    <section class="section__team">
+      <div class="container">
+        <p class="section__subtitle">Who we are</p>
+        <h2 class="section__title">Meet our team</h2>
+        <p class="team__description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+
+        <ul class="team__list">
+          <li class="team__list-item">
+            <img srcset="./img/pictures/Layer16-min.jpg 380w, ./img/pictures/Layer16@2x-min.jpg 760w" sizes="380px"
+              src="./img/pictures/Layer16-min.jpg" height="470" alt="Team1" />
+            <span class="team__name">Matthew Dix</span>
+            <span class="team__position">Graphic Design</span>
+            <div class="team__card">
+              <ul class="social__list">
+                <li class="social__list-item">
+                  <a href="" class="social__list-link">
+                    <svg class="social__list-svg">
                       <use href="./img/icons/sprite.svg#facebook"></use>
                     </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg class="svg-social">
-                        <use href="./img/icons/sprite.svg#twitter"></use>
-                      </svg></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg class="svg-social">
-                        <use href="./img/icons/sprite.svg#pinterest"></use>
-                      </svg></a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg class="svg-social">
-                        <use href="./img/icons/sprite.svg#instagram"></use>
-                      </svg></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                srcset="./img/pictures/Layer18-min.jpg 380w, ./img/pictures/Layer18@2x-min.jpg 760w"
-                sizes="380px"
-                src="./img/pictures/Layer18-min.jpg"
-                height="470"
-                alt="Team1"
-              />
-              <span class="team-name">Christopher Campbell</span>
-              <span class="team-position">Branding/UX design</span>
-              <div class="team-card">
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg class="svg-social">
-                        <use href="./img/icons/sprite.svg#facebook"></use>
-                      </svg>
-                      </a>
-                    </li>
-                    <li class="social-item">
-                      <a href="" class="social-link"
-                        ><svg class="svg-social">
-                          <use href="./img/icons/sprite.svg#twitter"></use>
-                        </svg></a>
-                    </li>
-                    <li class="social-item">
-                      <a href="" class="social-link"
-                        ><svg class="svg-social">
-                          <use href="./img/icons/sprite.svg#pinterest"></use>
-                        </svg></a>
-                    </li>
-                    <li class="social-item">
-                      <a href="" class="social-link"
-                        ><svg class="svg-social">
-                          <use href="./img/icons/sprite.svg#instagram"></use>
-                        </svg></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                srcset="./img/pictures/Layer19-min.jpg 380w, ./img/pictures/Layer19@2x-min.jpg 760w"
-                sizes="380px"
-                src="./img/pictures/Layer19-min.jpg"
-                height="470"
-                alt="Team1"
-              />
-              <span class="team-name">Michael Fertig</span>
-              <span class="team-position">Developer</span>
-              <div class="team-card">
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="social-link"
-                      ><svg class="svg-social">
-                        <use href="./img/icons/sprite.svg#facebook"></use>
-                      </svg>
-                      </a>
-                    </li>
-                    <li class="social-item">
-                      <a href="" class="social-link"
-                        ><svg class="svg-social">
-                          <use href="./img/icons/sprite.svg#twitter"></use>
-                        </svg></a>
-                    </li>
-                    <li class="social-item">
-                      <a href="" class="social-link"
-                        ><svg class="svg-social">
-                          <use href="./img/icons/sprite.svg#pinterest"></use>
-                        </svg></a>
-                    </li>
-                    <li class="social-item">
-                      <a href="" class="social-link"
-                        ><svg class="svg-social">
-                          <use href="./img/icons/sprite.svg#instagram"></use>
-                        </svg></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
-    <footer class="footer container">
-      <p class="copyright">
-        &copy; 2016 MoGo free PSD template by
-        <a href="" class="copyright-link">GoIT</a>
-      </p>
-  
-      <form action="#" class="email-form">
-        <input
-          class="email"
-          type="email"
-          name="email"
-          placeholder="Your Email..."
-        />
-        <input class="submit" type="submit" value="Subscribe" />
-      </form>
-    </footer>
-  </body>
-  
+                  </a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#pinterest"></use>
+                    </svg></a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#instagram"></use>
+                    </svg></a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="team__list-item">
+            <img srcset="./img/pictures/Layer18-min.jpg 380w, ./img/pictures/Layer18@2x-min.jpg 760w" sizes="380px"
+              src="./img/pictures/Layer18-min.jpg" height="470" alt="Team1" />
+            <span class="team__name">Christopher Campbell</span>
+            <span class="team__position">Branding/UX design</span>
+            <div class="team__card">
+              <ul class="social__list">
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#pinterest"></use>
+                    </svg></a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#instagram"></use>
+                    </svg></a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="team__list-item">
+            <img srcset="./img/pictures/Layer19-min.jpg 380w, ./img/pictures/Layer19@2x-min.jpg 760w" sizes="380px"
+              src="./img/pictures/Layer19-min.jpg" height="470" alt="Team1" />
+            <span class="team__name">Michael Fertig</span>
+            <span class="team__position">Developer</span>
+            <div class="team__card">
+              <ul class="social__list">
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#pinterest"></use>
+                    </svg></a>
+                </li>
+                <li class="social__list-item">
+                  <a href="" class="social__list-link"><svg class="social__list-svg">
+                      <use href="./img/icons/sprite.svg#instagram"></use>
+                    </svg></a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer class="footer container">
+    <p class="copyright">
+      &copy; 2016 MoGo free PSD template by
+      <a href="" class="copyright__link">GoIT</a>
+    </p>
+
+    <form action="#" class="footer__form">
+      <input class="footer__form-email" type="email" name="email" placeholder="Your Email..." />
+      <input class="footer__form-submit" type="submit" value="Subscribe" />
+    </form>
+  </footer>
+</body>
+
 </html>
