--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -14,17 +14,18 @@
         <div class="container">
         <nav class="navigation">
             <ul class="nav-list">
-            <li class="nav-item">
+            <li class="nav-item log-in">
                 <a href="#" class="nav-link">Log in</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item sign-in">
                 <a href="#" class="nav-link">Sign up</a>
             </li>
         </ul>
         <a href="#" class="logo">URLAUBSGLÜCK</a>
     </nav>
     <h1 class="header-title">
-        Share your<br />holiday dreams<span class="header-subtitle">And find the perfect partner fullfill it</span>
+        Share your<br />holiday dreams
+        <span class="header-subtitle"><br> And find the perfect partner fullfill it</span>
       </h1>
         <button class="find-btn">Find your holiday partner</button>
 </div>
